--- a/2tpife.css
+++ b/2tpife.css
@@ -2,6 +2,8 @@
   display: flex;
   background-color: aquamarine;
   justify-content: space-between;
+  background-image: linear-gradient(rgb(93, 93, 236), rgb(255, 255, 255));
+ 
 }
 
 #navigationTittle {
@@ -9,30 +11,39 @@
   font-family: cursive;
   font-size: large;
   padding: 20px;
+  background-image: linear-gradient(rgb(93, 93, 236), rgb(255, 255, 255));
+
+ 
 }
 
 #navigationLinks a {
   text-decoration: none;
   padding: 20px;
   font-size: large;
+  background-image: linear-gradient(rgb(93, 93, 236), rgb(255, 255, 255));
+
 }
 
 #navigationLinks {
   display: flex;
   align-items: center;
   background-color: darkgoldenrod;
+  background-image: linear-gradient(rgb(93, 93, 236), rgb(255, 255, 255));
+  
 }
 
 #navigationLanguage {
   display: flex;
   align-items: center;
   background-color: darkgoldenrod;
+  background-image: linear-gradient(rgb(93, 93, 236), rgb(255, 255, 255));
 }
 
 #Signup {
   display: flex;
   align-items: center;
   background-color: red;
+  background-image: linear-gradient(rgb(104, 100, 100), rgb(177, 177, 165));
 }
 
 #loginButton,
@@ -50,6 +61,8 @@
   border: none;
   border-radius: 5px;
   box-shadow: 0 5px #999;
+  background-image: linear-gradient(rgb(93, 93, 236), rgb(255, 255, 255));
+  width: 200px;
 }
 
 #loginButton:hover,
@@ -58,6 +71,8 @@
 #deleteButton:hover,
 #logoutButton:hover {
   background-color: #3e8e41;
+  background-image: linear-gradient(rgb(93, 93, 236), rgb(255, 255, 255));
+
 }
 
 #loginButton:active,
@@ -68,6 +83,7 @@
   background-color: #3e8e41;
   box-shadow: 0 5px #666;
   transform: translateY(4px);
+  background-image: linear-gradient(rgb(93, 93, 236), rgb(255, 255, 255));
 }
 
 #login {
@@ -76,6 +92,7 @@
   align-items: center;
   justify-content: space-around;
   padding: 20px;
+  background-image: linear-gradient(rgb(93, 93, 236), rgb(255, 255, 255));
 }
 
 #login form {
@@ -83,6 +100,7 @@
   display: flex;
   justify-content: space-around;
   flex-direction: column;
+  background-image: linear-gradient(rgb(93, 93, 236), rgb(255, 255, 255));
 }
 
 #login form div {
@@ -90,18 +108,29 @@
   justify-content: space-around;
   flex-wrap: wrap;
   padding: 5px;
-  width: 100%;
+  
 }
 
 #AllProducts {
   display: flex;
-  justify-content: space-around;
-  flex: wrap;
-  align-items: center;
+ justify-content: center;
+ padding: 25px;
+ justify-content: space-around;
+ flex-wrap: wrap;
+ 
+
+  
+  
 }
 
 .Product {
+  display: grid;
+  align-content: center;
   text-align: center;
+  align-items: center;
+  flex-direction: column;
+  grid-template-columns: auto auto auto auto auto auto;
+ 
 }
 
 ::-moz-selection {
@@ -140,3 +169,65 @@
 .sticky+.content {
   padding-top: 102px;
 }
+#finish{
+  text-align: center;
+  outline-style: double;
+  outline-color: rgb(74, 48, 241);
+outline-width: 3px;
+}
+#navigationBar1 {
+  display: flex;
+  background-color: aquamarine;
+  justify-content: space-between;
+  background-image: linear-gradient(rgb(93, 93, 236), rgb(255, 255, 255));
+ 
+}
+#product1{
+  background-color: rgb(139, 170, 216);
+  text-align: center;
+  outline: thick ridge rgb(108, 118, 201);
+ 
+  
+}
+#signup{
+ background: rgb(102, 102, 218);
+    font-family: sans-serif;
+    font-size: 10px
+    padding: 4em 4em 2em;
+    max-width:  400px;
+    margin: 50px auto 0;
+    box-shadow: 0 0 1em #222;
+    
+
+      text-align:center; 
+    }
+    input {
+      display: block;
+      box-sizing: border-box;
+      width: 100%;
+      outline: none;
+      margin:0;
+    }
+    input[type="password"] {
+      background: #fff;
+      border: 1px solid #dbdbdb;
+      font-size: 10px;
+      padding: .8em .5em;
+      border-radius: 2px;
+    }
+     input[type="password"]:focus {
+      background: #fff;
+    }
+    span {
+      display:block;
+      background: #F9A5A5;
+      padding: 2px 5px;
+      color: #666;
+    }
+    img{
+      width: 256px;
+      height: 176px; 
+    }
+
+    
+
